[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://Sprite/enemyBlack3.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 53.0589

[node name="Boss" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Label" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -71.0
margin_right = 20.0
margin_bottom = -57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="Timer2" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="Timer3" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]


